# hogflow

./: .gitignore  AGENTS.md  HOGFLOW_PROJECT_CONTEXT.md  INVENTION_LOG.md  MARKET_RESEARCH.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  clip_manifest.example.json  review_sidecar.example.json
docs/phase_0/: assumptions_and_unknowns.md  current_process.md  phase_0_summary.md  problem_statement.md  process_map.md  proposed_solution.md
tests/: _phase4_3_helpers.py  _phase5_2_helpers.py  _phase5_3_helpers.py  test_annotation_manifest.py  test_annotation_models.py  test_annotation_validation.py  test_architecture_boundaries.py  test_baseline_training.py  test_camera_source_contract.py  test_camera_stream_cli.py  test_ci_workflow.py  test_contract_models.py  test_core_errors.py  test_data_git_hygiene.py  test_data_models.py  test_data_validation.py  test_dataset_inventory.py  test_dataset_selection.py  test_dataset_splitting.py  test_detection_evaluation_models.py  test_detection_metrics.py  test_detector_contract.py  test_frame_extraction.py  test_frame_selection.py  test_generic_counter_cli.py  test_generic_counting_pipeline.py  test_line_crossing.py  test_live_detection_cli.py  test_live_detection_models.py  test_live_detection_pipeline.py  test_live_detection_telemetry.py  test_live_detector_fakes.py  test_live_stream_runner.py  test_live_tracker_contract.py  test_live_tracker_fakes.py  test_live_tracking_models.py  test_live_tracking_pipeline.py  test_live_tracking_telemetry.py  test_logging_config.py  test_opencv_camera_source.py  (+25 more)
(+122 files in other folders)
