[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hogflow"
version = "0.1.0"
description = "HogFlow computer vision research prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.10,<5",
    "supervision>=0.29.1,<0.30",
    "ultralytics>=8.4.92,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
